[project]
name = "link-linter"
dynamic = ["version"]
description = "A tool to scan directories for URLs and log response codes"
authors = [{ name = "Elliott Steer", email = "essteer@pm.me" }]
dependencies = [
    "beautifulsoup4==4.13.3",
    "requests==2.32.3"
]
requires-python = ">=3.9"
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["url", "maintenance"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
documentation = "https://github.com/essteer/link-linter/blob/main/README.md"
repository = "https://github.com/essteer/link-linter"
issues = "https://github.com/essteer/link-linter/issues"

[tool.uv]
dev-dependencies = [
    "pre-commit==4.1.0",
    "ruff==0.9.5",
]
